[gd_scene format=3 uid="uid://cjwm6dw4kjm7k"]

[ext_resource type="FontFile" uid="uid://3a6yvj5wow85" path="res://themes/quicksand_bold.otf" id="1_06t4h"]
[ext_resource type="Script" uid="uid://ce072oxj8owl" path="res://scenes/start_menu/main_menu.gd" id="1_jix8l"]
[ext_resource type="Texture2D" uid="uid://b8ghaodjgclct" path="res://scenes/start_menu/background_welcome.png" id="2_78d18"]
[ext_resource type="FontFile" uid="uid://cynsf6h0lboxh" path="res://themes/melt_swashes.ttf" id="3_fu7sn"]
[ext_resource type="AudioStream" uid="uid://bo3ohyoqkll24" path="res://audio/GGJ-20266-main-theme.wav" id="5_xcxou"]
[ext_resource type="AudioStream" uid="uid://dp5xsiqgpkm3k" path="res://audio/GGJ-20266-start-pressed.wav" id="6_ob17i"]
[ext_resource type="AudioStream" uid="uid://cckni24pmtbbv" path="res://audio/GGJ-20266-stop-pressed.wav" id="7_uuqnp"]
[ext_resource type="AudioStream" uid="uid://6ncgyaod7y3r" path="res://audio/GGJ-20266-quit-pressed.wav" id="8_pmqns"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jgsm7"]
texture = ExtResource("2_78d18")

[sub_resource type="FontVariation" id="FontVariation_glbon"]
base_font = ExtResource("3_fu7sn")

[sub_resource type="FontVariation" id="FontVariation_7vrkn"]
base_font = ExtResource("1_06t4h")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.41522983, 0.6393183, 0.7120933, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id="Animation_pmqns"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SceneTransition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/MainTheme:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio/MainTheme:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ob17i"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SceneTransition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/MainTheme:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-50.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio/MainTheme:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.13333334),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uuqnp"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SceneTransition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/MainTheme:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -50.0]
}

[sub_resource type="Animation" id="Animation_716sv"]
resource_name = "quit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SceneTransition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/MainTheme:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.033333335, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -50.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pmqns"]
_data = {
&"RESET": SubResource("Animation_pmqns"),
&"fade_in": SubResource("Animation_ob17i"),
&"fade_out": SubResource("Animation_uuqnp"),
&"quit": SubResource("Animation_716sv")
}

[node name="MainMenu" type="CanvasLayer" unique_id=1191851457]
script = ExtResource("1_jix8l")

[node name="Background" type="Panel" parent="." unique_id=459626700]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxTexture_jgsm7")

[node name="Title" type="Label" parent="." unique_id=65945116]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -836.0
offset_top = 33.0
offset_right = 837.0
offset_bottom = 237.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.22745098, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 49
theme_override_fonts/font = SubResource("FontVariation_glbon")
theme_override_font_sizes/font_size = 164
text = "Mask that cacophonia !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="." unique_id=1933118268]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -206.75
offset_right = 236.0
offset_bottom = 206.75
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
metadata/_edit_group_ = true

[node name="Start" type="Button" parent="Buttons" unique_id=1317193441]
layout_mode = 2
theme_override_colors/font_color = Color(0.9183024, 0.8959569, 0.7560493, 1)
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 92
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
text = "Start"

[node name="Credits" type="Button" parent="Buttons" unique_id=1593511198]
layout_mode = 2
theme_override_colors/font_color = Color(0.91764706, 0.89411765, 0.75686276, 1)
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 92
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
text = "Credits"

[node name="Quit" type="Button" parent="Buttons" unique_id=448907699]
layout_mode = 2
theme_override_colors/font_color = Color(0.9183024, 0.8959569, 0.7560493, 1)
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 92
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
text = "Quit"

[node name="SceneTransition" type="ColorRect" parent="." unique_id=637401130]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1195555013]
libraries/ = SubResource("AnimationLibrary_pmqns")
autoplay = &"fade_in"

[node name="Audio" type="Node" parent="." unique_id=1184439593]

[node name="MainTheme" type="AudioStreamPlayer" parent="Audio" unique_id=382382254]
stream = ExtResource("5_xcxou")

[node name="StartKeyPressed" type="AudioStreamPlayer" parent="Audio" unique_id=675996537]
stream = ExtResource("6_ob17i")

[node name="CreditsKeyPressed" type="AudioStreamPlayer" parent="Audio" unique_id=642553028]
stream = ExtResource("7_uuqnp")

[node name="QuitKeyPressed" type="AudioStreamPlayer" parent="Audio" unique_id=914467757]
stream = ExtResource("8_pmqns")

[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
